add nested routes for foreign key
