# api/urls.py
@@ -1,5 +1,6 @@
 from django.urls import path, include
 from rest_framework import routers
+from rest_framework_nested import routers as nest_routers
 
 from api import views
 
@@ -8,6 +9,13 @@ app_name = 'api'
 router = routers.SimpleRouter()
 router.register('shops', viewset=views.ShopViewSet)
 
+parent_router = nest_routers.SimpleRouter()
+parent_router.register(r'companies', views.CompanyViewSet)
+
+nest_shop_router = nest_routers.NestedSimpleRouter(parent_router, r'companies', lookup='company')
+nest_shop_router.register(r'shops', views.NestedShopViewSet, basename='company-shops')
+
 urlpatterns = [
     path('', include(router.urls)),
+    path(r'', include(nest_shop_router.urls)),
 ]
