# api/views.py
@@ -1,10 +1,11 @@
-from drf_spectacular.utils import extend_schema, extend_schema_view, inline_serializer, OpenApiExample, OpenApiResponse
-from rest_framework import viewsets, serializers
+from drf_spectacular.utils import extend_schema, extend_schema_view, inline_serializer, OpenApiExample, OpenApiResponse, \
+    OpenApiParameter
+from rest_framework import viewsets, serializers, mixins
 from rest_framework.decorators import action
 from rest_framework.response import Response
 
-from api.serializers import ShopSerializer
-from shop.models import Shop
+from api.serializers import ShopSerializer, CompanySerializer, NestedShopSerializer
+from shop.models import Shop, Company
 
 
 @extend_schema_view(
@@ -49,3 +50,23 @@ class ShopViewSet(viewsets.ModelViewSet):
     @action(detail=False, methods=['get'])
     def message(self, request, pk=None):
         return Response({'message': 'open'})
+
+
+class CompanyViewSet(viewsets.ModelViewSet):
+    queryset = Company.objects.all()
+    serializer_class = CompanySerializer
+
+
+@extend_schema_view(
+    retrieve=extend_schema(
+        parameters=[
+            OpenApiParameter(name='company_pk', location=OpenApiParameter.PATH, type=int),
+            OpenApiParameter(name='id', location=OpenApiParameter.PATH, type=int)
+        ]
+    ),
+)
+class NestedShopViewSet(mixins.RetrieveModelMixin, viewsets.GenericViewSet):
+    serializer_class = NestedShopSerializer
+
+    def get_queryset(self):
+        return Shop.objects.filter(company=self.kwargs['company_pk'])
