# shop/models.py
@@ -1,6 +1,11 @@
 from django.db import models
 from django.utils import timezone
 from django.utils.translation import gettext_lazy as _
+from django.db.models.signals import pre_save
+
+
+class Company(models.Model):
+    name = models.CharField('名前', max_length=255)
 
 
 class Shop(models.Model):
@@ -13,3 +18,14 @@ class Shop(models.Model):
     size = models.IntegerField('規模', choices=Size.choices, default=Size.MEDIUM)
     established_at = models.DateTimeField('設立日時', default=timezone.now)
     updated_at = models.DateTimeField(auto_now=True)
+    company = models.ForeignKey(Company, verbose_name='会社', on_delete=models.PROTECT, default=1)
+
+
+# auto_rowなupdated_atがfixtureだけでは設定できないため、signalを使ってfixtureのときだけ自分で設定
+# https://stackoverflow.com/a/64984759
+def fix_updated_at_by_fixture(sender, instance, **kwargs):
+    if kwargs['raw']:
+        instance.updated_at = timezone.now()
+
+
+pre_save.connect(fix_updated_at_by_fixture, sender=Shop)
